...
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_margin="@dimen/normal_spacing"
              android:orientation="vertical">

    <Button
        android:id="@+id/btnSendBangWithAction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_spacing"
        android:text="@string/send_bang_with_action"/>

    <Button
        android:id="@+id/btnSendBangWithoutAction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_spacing"
        android:text="@string/send_bang_without_action"/>

</LinearLayout>
