...
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_margin="@dimen/normal_spacing"
              android:orientation="vertical">

    <Button
        android:id="@+id/btnSubscribeOpenB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_spacing"
        android:text="@string/subscribe_and_open_b"/>

    <Button
        android:id="@+id/btnUnsubscribeOpenB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_spacing"
        android:text="@string/unsubscribe_and_open_b"/>

    <TextView
...
